--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -4,14 +4,14 @@ one:
   question: Question one?
   answer_correct: right
   answer_wrong_1: wrong 1
-  answere_wrong_2: wrong 2
-  answere_wrong_3: wrong3
+  answer_wrong_2: wrong 2
+  answer_wrong_3: wrong3
   rating: 10
 
 two:
   question: Question two?
   answer_correct: correct
   answer_wrong_1: false 1
-  answere_wrong_2: false 2
-  answere_wrong_3: false 3
+  answer_wrong_2: false 2
+  answer_wrong_3: false 3
   rating: 15
