--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,8 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+category:
   name: category
-  questions: one, two
+  questions: question_one, question_two
 
 empty:
   name: empty
+  questions:
