--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+fred:
   name: Fred
   email: fred@flintstone.com
   password_digest: <%= User.digest('password') %>
